remove all route

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+## lang="en">
   <head>
     <title>
-      Damarmas - Clothing Store eCommerce Store HTML Website Template
+      Damarmas - Clothing Store # Website Template
     </title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -57,25 +56,25 @@
 
         <ul class="cat-list">
           <li class="cat-list-item">
-            <a href="shop.html" title="Men Jackets">Men Jackets</a>
+            <a href="#" title="Men Jackets">Men Jackets</a>
           </li>
           <li class="cat-list-item">
-            <a href="shop.html" title="Fashion">Fashion</a>
+            <a href="#" title="Fashion">Fashion</a>
           </li>
           <li class="cat-list-item">
-            <a href="shop.html" title="Casual Wears">Casual Wears</a>
+            <a href="#" title="Casual Wears">Casual Wears</a>
           </li>
           <li class="cat-list-item">
-            <a href="shop.html" title="Women">Women</a>
+            <a href="#" title="Women">Women</a>
           </li>
           <li class="cat-list-item">
-            <a href="shop.html" title="Trending">Trending</a>
+            <a href="#" title="Trending">Trending</a>
           </li>
           <li class="cat-list-item">
-            <a href="shop.html" title="Hoodie">Hoodie</a>
+            <a href="#" title="Hoodie">Hoodie</a>
           </li>
           <li class="cat-list-item">
-            <a href="shop.html" title="Kids">Kids</a>
+            <a href="#" title="Kids">Kids</a>
           </li>
         </ul>
       </div>
@@ -87,7 +86,7 @@
             <div class="row d-flex align-items-center">
               <div class="col-lg-2 col-md-2">
                 <div class="main-logo">
-                  <a href="index.html">
+                  <a href="#">
                     <img src="images/main-logo.png" alt="logo" />
                   </a>
                 </div>
@@ -161,7 +160,7 @@
                     </p>
                     <div class="btn-wrap">
                       <a
-                        href="shop.html"
+                        href="#"
                         class="btn btn-light btn-medium d-flex align-items-center"
                         tabindex="0"
                         >Shop it now <i class="icon icon-arrow-io"></i>
@@ -192,7 +191,7 @@
                     </p>
                     <div class="btn-wrap">
                       <a
-                        href="shop.html"
+                        href="#"
                         class="btn btn-light btn-light-arrow btn-medium d-flex align-items-center"
                         tabindex="0"
                         >Shop it now <i class="icon icon-arrow-io"></i>
@@ -214,7 +213,7 @@
         >
           <h2 class="section-title">Best Seller Products</h2>
           <div class="btn-wrap">
-            <a href="shop.html" class="d-flex align-items-center"
+            <a href="#" class="d-flex align-items-center"
               >View all products <i class="icon icon icon-arrow-io"></i
             ></a>
           </div>
@@ -251,7 +250,7 @@
                 </div>
                 <div class="product-detail">
                   <h3 class="product-title">
-                    <a href="single-product.html">Full sleeve cover shirt</a>
+                    <a href="single-#">Full sleeve cover shirt</a>
                   </h3>
                   <span class="item-price text-primary">$40.00</span>
                 </div>
@@ -287,7 +286,7 @@
                 </div>
                 <div class="product-detail">
                   <h3 class="product-title">
-                    <a href="single-product.html">Volunteer Half blue</a>
+                    <a href="single-#">Volunteer Half blue</a>
                   </h3>
                   <span class="item-price text-primary">$38.00</span>
                 </div>
@@ -323,7 +322,7 @@
                 </div>
                 <div class="product-detail">
                   <h3 class="product-title">
-                    <a href="single-product.html">Double yellow shirt</a>
+                    <a href="single-#">Double yellow shirt</a>
                   </h3>
                   <span class="item-price text-primary">$44.00</span>
                 </div>
@@ -359,7 +358,7 @@
                 </div>
                 <div class="product-detail">
                   <h3 class="product-title">
-                    <a href="single-product.html">Long belly grey pant</a>
+                    <a href="single-#">Long belly grey pant</a>
                   </h3>
                   <span class="item-price text-primary">$33.00</span>
                 </div>
@@ -391,7 +390,7 @@
                   Dignissim massa diam elementum.
                 </p>
                 <div class="btn-wrap">
-                  <a href="shop.html" class="d-flex align-items-center"
+                  <a href="#" class="d-flex align-items-center"
                     >shop collection <i class="icon icon-arrow-io"></i>
                   </a>
                 </div>
@@ -411,7 +410,7 @@
                 <div class="categories">Basic Collection</div>
                 <h3 class="item-title">Basic shoes.</h3>
                 <div class="btn-wrap">
-                  <a href="shop.html" class="d-flex align-items-center"
+                  <a href="#" class="d-flex align-items-center"
                     >shop collection <i class="icon icon-arrow-io"></i>
                   </a>
                 </div>
@@ -429,7 +428,7 @@
                 <div class="categories">Best Selling Product</div>
                 <h3 class="item-title">woolen hat.</h3>
                 <div class="btn-wrap">
-                  <a href="shop.html" class="d-flex align-items-center"
+                  <a href="#" class="d-flex align-items-center"
                     >shop collection <i class="icon icon-arrow-io"></i>
                   </a>
                 </div>
@@ -460,7 +459,7 @@
                 rutrum dui, odio.
               </p>
               <div class="btn-wrap">
-                <a href="shop.html" class="d-flex align-items-center"
+                <a href="#" class="d-flex align-items-center"
                   >shop collection <i class="icon icon-arrow-io"></i>
                 </a>
               </div>
@@ -551,13 +550,13 @@
                 <h5 class="widget-title">Damarmas</h5>
                 <ul class="menu-list list-unstyled">
                   <li class="menu-item">
-                    <a href="about.html">Tentang Kami</a>
+                    <a href="#">Tentang Kami</a>
                   </li>
                   <li class="menu-item">
                     <a href="#">Produk </a>
                   </li>
                   <li class="menu-item">
-                    <a href="blog.html">Galeri</a>
+                    <a href="#">Galeri</a>
                   </li>
                   <li class="menu-item">
                     <a href="#">Portofolio</a>
@@ -595,5 +594,4 @@
     <script src="js/jquery-1.11.0.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/script.js"></script>
-  </body>
-</html>
+  </body#>
