--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="description" content="" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="icomoon/icomoon.css" />
+    <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
       type="text/css"
