--- a/index.html
+++ b/index.html
@@ -443,7 +443,9 @@
                 </p>
                 <p>
                   <strong
-                    ><a href="https://wa.me/6281226090061" target="_blank"
+                    ><a
+                      href="https://api.whatsapp.com/send?phone=6281226090061&amp;text=Saya%20membutuhkan%20info%20lebih%20lanjut%20tentang%20barang%20yang%20ada%20di%20damarmas.co.id%20.%20Tolong%20dibantu%20ya!"
+                      target="_blank"
                       >+62 812 2609 0061</a
                     ></strong
                   >
@@ -465,7 +467,11 @@
       <hr />
     </footer>
 
-    <a href="https://wa.me/6281226090061" class="whatsapp-fab" target="_blank">
+    <a
+      href="https://api.whatsapp.com/send?phone=6281226090061&amp;text=Saya%20membutuhkan%20info%20lebih%20lanjut%20tentang%20barang%20yang%20ada%20di%20damarmas.co.id%20.%20Tolong%20dibantu%20ya!"
+      class="whatsapp-fab"
+      target="_blank"
+    >
       <img
         src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg"
         alt="WhatsApp"
