FEAT: index, shop, contact, about modify

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <ul class="menu-list">
                       <li>
                         <a
-                          href="#"
+                          href="index.html"
                           class="item-anchor active"
                           data-effect="Home"
                           >Beranda</a
@@ -68,19 +68,28 @@
                       </li>
 
                       <li>
-                        <a href="#" class="item-anchor" data-effect="About"
+                        <a
+                          href="about.html"
+                          class="item-anchor"
+                          data-effect="About"
                           >Tentang Kami</a
                         >
                       </li>
 
                       <li>
-                        <a href="#" class="item-anchor" data-effect="Shop"
+                        <a
+                          href="shop.html"
+                          class="item-anchor"
+                          data-effect="Shop"
                           >Toko</a
                         >
                       </li>
 
                       <li>
-                        <a href="#" class="item-anchor" data-effect="Contact"
+                        <a
+                          href="contact.html"
+                          class="item-anchor"
+                          data-effect="Contact"
                           >Kontak</a
                         >
                       </li>
@@ -181,7 +190,7 @@
         >
           <h2 class="section-title">Produk Terlaris</h2>
           <div class="btn-wrap">
-            <a href="#" class="d-flex align-items-center"
+            <a href="shop.html" class="d-flex align-items-center"
               >Lihat Semua Produk <i class="icon icon icon-arrow-io"></i
             ></a>
           </div>
@@ -265,7 +274,7 @@
                   menyesuaikan kebutuhan dan preferensi anda.
                 </p>
                 <div class="btn-wrap">
-                  <a href="#" class="d-flex align-items-center"
+                  <a href="shop.html" class="d-flex align-items-center"
                     >Lihat Produk <i class="icon icon-arrow-io"></i>
                   </a>
                 </div>
@@ -285,7 +294,7 @@
                 <div class="categories">Layanan</div>
                 <h3 class="item-title">Advertising.</h3>
                 <div class="btn-wrap">
-                  <a href="#" class="d-flex align-items-center"
+                  <a href="shop.html" class="d-flex align-items-center"
                     >Lihat Produk <i class="icon icon-arrow-io"></i>
                   </a>
                 </div>
@@ -303,7 +312,7 @@
                 <div class="categories">Produk</div>
                 <h3 class="item-title">Running Text.</h3>
                 <div class="btn-wrap">
-                  <a href="#" class="d-flex align-items-center"
+                  <a href="shop.html" class="d-flex align-items-center"
                     >Lihat Produk <i class="icon icon-arrow-io"></i>
                   </a>
                 </div>
@@ -333,7 +342,7 @@
                 menyesuaikan kebutuhan dan preferensi anda.
               </p>
               <div class="btn-wrap">
-                <a href="#" class="d-flex align-items-center"
+                <a href="shop.html" class="d-flex align-items-center"
                   >Lihat Produk <i class="icon icon-arrow-io"></i>
                 </a>
               </div>
@@ -418,16 +427,16 @@
                 <h5 class="widget-title">Damarmas</h5>
                 <ul class="menu-list list-unstyled">
                   <li class="menu-item">
-                    <a href="#">Tentang Kami</a>
+                    <a href="about.html">Tentang Kami</a>
                   </li>
                   <li class="menu-item">
-                    <a href="#">Toko</a>
+                    <a href="shop.html">Toko</a>
                   </li>
                   <li class="menu-item">
-                    <a href="#">Dokumentasi & Portofolio</a>
+                    <a href="#instagram">Dokumentasi & Portofolio</a>
                   </li>
                   <li class="menu-item">
-                    <a href="#">Kontak</a>
+                    <a href="contact.html">Kontak</a>
                   </li>
                 </ul>
               </div>
