FIX: Single Product and some edit

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <div
             class="swiper-slide"
             style="
-              background-image: url('images/hero.png');
+              background-image: url('images/hero-2.png');
               background-repeat: no-repeat;
               background-size: cover;
               background-position: center;
@@ -363,8 +363,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Exhibition Archipelago Hotel Aston Banyuwangi.png"
+                alt="Exhibition Archipelago Hotel Aston Banyuwangi"
                 class="insta-image"
               />
             </figure>
@@ -372,8 +372,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Instalasi Fix Videotron Jasamarga.png"
+                alt="Instalasi Fix Videotron Jasamarga"
                 class="insta-image"
               />
             </figure>
@@ -381,8 +381,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Instalasi Letter Papaya Fresh Gallery.png"
+                alt="Instalasi Letter Papaya Fresh Gallery"
                 class="insta-image"
               />
             </figure>
@@ -390,8 +390,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Maintenance Panel Deepsea.png"
+                alt="Maintenance Panel Deepsea"
                 class="insta-image"
               />
             </figure>
@@ -399,8 +399,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Maintenance TV Wall Polrestabes Surabaya.png"
+                alt="Maintenance TV Wall Polrestabes Surabaya"
                 class="insta-image"
               />
             </figure>
@@ -408,8 +408,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Pengadaan Alins Alongins Pusdikkav TA 2024.png"
+                alt="Pengadaan Alins Alongins Pusdikkav TA 2024"
                 class="insta-image"
               />
             </figure>
