--- a/shop.html
+++ b/shop.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Ultras - Clothing Store eCommerce Store HTML Website Template</title>
+    <title>
+      Damarmas | VISUAL - AUDIO - LIGHTING - ADVERTISING MECHANICAL - ELECTRICAL
+      - PLUMBING
+    </title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,6 +15,7 @@
     <meta name="description" content="" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="icomoon/icomoon.css" />
+    <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
       type="text/css"
@@ -121,7 +125,7 @@
       </div>
     </section>
 
-    <div class="shopify-grid padding-large">
+    <div class="shopify-grid padding-large no-padding-bottom">
       <div class="container">
         <div class="row">
           <section id="selling-products" class="col-md-9 product-store">
@@ -146,7 +150,7 @@
                       </a>
                       <div class="product-detail">
                         <h3 class="product-title">
-                          <a href="single-product.html">Instalasi Videotron</a>
+                          <a href="product-detail.html">Instalasi Videotron</a>
                         </h3>
                         <div class="item-price text-primary">Rp. 1.200.000</div>
                       </div>
@@ -313,7 +317,7 @@
     </div>
 
     <hr />
-    <section id="instagram" class="padding-large no-padding-bottom">
+    <section id="instagram" class="padding-small">
       <div class="container">
         <div class="section-header">
           <h2 class="section-title">Dokumentasi & Portofolio</h2>
@@ -322,8 +326,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Exhibition Archipelago Hotel Aston Banyuwangi.png"
+                alt="Exhibition Archipelago Hotel Aston Banyuwangi"
                 class="insta-image"
               />
             </figure>
@@ -331,8 +335,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Instalasi Fix Videotron Jasamarga.png"
+                alt="Instalasi Fix Videotron Jasamarga"
                 class="insta-image"
               />
             </figure>
@@ -340,8 +344,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Instalasi Letter Papaya Fresh Gallery.png"
+                alt="Instalasi Letter Papaya Fresh Gallery"
                 class="insta-image"
               />
             </figure>
@@ -349,8 +353,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Maintenance Panel Deepsea.png"
+                alt="Maintenance Panel Deepsea"
                 class="insta-image"
               />
             </figure>
@@ -358,8 +362,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Maintenance TV Wall Polrestabes Surabaya.png"
+                alt="Maintenance TV Wall Polrestabes Surabaya"
                 class="insta-image"
               />
             </figure>
@@ -367,8 +371,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Pengadaan Alins Alongins Pusdikkav TA 2024.png"
+                alt="Pengadaan Alins Alongins Pusdikkav TA 2024"
                 class="insta-image"
               />
             </figure>
@@ -377,7 +381,7 @@
       </div>
     </section>
 
-    <section id="shipping-information" class="padding-large">
+    <section id="shipping-information" class="padding-small">
       <div class="container">
         <div
           class="row d-flex flex-wrap align-items-center justify-content-between"
