--- a/about.html
+++ b/about.html
@@ -249,7 +249,7 @@
       </div>
     </section>
 
-    <section id="instagram" class="padding-large">
+    <section id="instagram" class="padding-large no-padding-top">
       <div class="container">
         <div class="section-header">
           <h2 class="section-title">Dokumentasi & Portofolio</h2>
@@ -258,8 +258,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Exhibition Archipelago Hotel Aston Banyuwangi.png"
+                alt="Exhibition Archipelago Hotel Aston Banyuwangi"
                 class="insta-image"
               />
             </figure>
@@ -267,8 +267,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Instalasi Fix Videotron Jasamarga.png"
+                alt="Instalasi Fix Videotron Jasamarga"
                 class="insta-image"
               />
             </figure>
@@ -276,8 +276,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Instalasi Letter Papaya Fresh Gallery.png"
+                alt="Instalasi Letter Papaya Fresh Gallery"
                 class="insta-image"
               />
             </figure>
@@ -285,8 +285,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Maintenance Panel Deepsea.png"
+                alt="Maintenance Panel Deepsea"
                 class="insta-image"
               />
             </figure>
@@ -294,8 +294,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Maintenance TV Wall Polrestabes Surabaya.png"
+                alt="Maintenance TV Wall Polrestabes Surabaya"
                 class="insta-image"
               />
             </figure>
@@ -303,8 +303,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Pengadaan Alins Alongins Pusdikkav TA 2024.png"
+                alt="Pengadaan Alins Alongins Pusdikkav TA 2024"
                 class="insta-image"
               />
             </figure>
