--- a/contact.html
+++ b/contact.html
@@ -272,8 +272,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Exhibition Archipelago Hotel Aston Banyuwangi.png"
+                alt="Exhibition Archipelago Hotel Aston Banyuwangi"
                 class="insta-image"
               />
             </figure>
@@ -281,8 +281,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Instalasi Fix Videotron Jasamarga.png"
+                alt="Instalasi Fix Videotron Jasamarga"
                 class="insta-image"
               />
             </figure>
@@ -290,8 +290,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Instalasi Letter Papaya Fresh Gallery.png"
+                alt="Instalasi Letter Papaya Fresh Gallery"
                 class="insta-image"
               />
             </figure>
@@ -299,8 +299,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Maintenance Panel Deepsea.png"
+                alt="Maintenance Panel Deepsea"
                 class="insta-image"
               />
             </figure>
@@ -308,8 +308,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Maintenance TV Wall Polrestabes Surabaya.png"
+                alt="Maintenance TV Wall Polrestabes Surabaya"
                 class="insta-image"
               />
             </figure>
@@ -317,8 +317,8 @@
           <div class="col-lg-2 col-md-4 col-sm-6">
             <figure class="zoom-effect">
               <img
-                src="images/insta-image1.jpg"
-                alt="instagram"
+                src="images/portfolio/Pengadaan Alins Alongins Pusdikkav TA 2024.png"
+                alt="Pengadaan Alins Alongins Pusdikkav TA 2024"
                 class="insta-image"
               />
             </figure>
@@ -327,7 +327,7 @@
       </div>
     </section>
 
-    <section id="shipping-information" class="padding-large">
+    <section id="shipping-information" class="padding-small">
       <div class="container">
         <div
           class="row d-flex flex-wrap align-items-center justify-content-between"
